Fixed bug where deleting one docstring comment would collapse them all.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1137,6 +1137,10 @@ span.version {
 	margin-bottom: 10px;
 }
 
+.docstring_comments ul {
+    margin-bottom: 10px
+}
+
 .docstring_comments p {
 	font-size: 14px;
 	margin-bottom: 10px;
